# chandamama-studio

./: .env.template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  Dockerfile  LICENSE  QDRANT_CLOUD_QUICK.md  QDRANT_DB_GUIDE.md  QUICK_DEPLOY.txt  README.md  REPORT.md  STREAMLIT_CLOUD_DEPLOY.md  app.py  check_token.py  gen_output.txt  headless_comparison_test.py  pyproject.toml  railway.toml  rebuild_db.py  requirements.txt  streamlit_graph.py  test_hf_models.py  verify_ai.py  verify_openai.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.gitlab/issue_templates/: Bug.md  Feature.md
.gitlab/merge_request_templates/: Default.md
.streamlit/: config.toml
chunks/1947/: చందమామ_1947_07_chunks.json  చందమామ_1947_10_chunks.json
chunks/1948/: చందమామ_1948_01_chunks.json  చందమామ_1948_05_chunks.json  చందమామ_1948_06_chunks.json  చందమామ_1948_08_chunks.json  చందమామ_1948_10_chunks.json  చందమామ_1948_11_chunks.json  చందమామ_1948_12_chunks.json
chunks/1949/: చందమామ_1949_01_chunks.json  (+6 more)
docs/: CONTRIBUTING.md  LICENSE  QDRANT_CLOUD_SETUP.md
experiments/: local_llm.py  rag.py
logs/: skipped_stories.csv
src/: config.py  debug_qdrant.py  generate_chunks.py  generate_normalized_stats.py  graph_utils.py  local_llm.py  local_llm_multi.py  normalize_genres.py  populate_qdrant.py  query_qdrant.py  rag.py  reproduce_issue.py  search_utils.py  story_gen.py  streamlit_prompt_playground.py
tests/: test_puzzle_gen.py  test_story_gen.py
utils/: aggregate_poem_stats.py  aggregate_stats.py  count_chunks.py  test_qdrant.py
(+774 files in other folders)
